--- a/index-ru.html
+++ b/index-ru.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -15,10 +15,21 @@
 
 <body>
     <header>
+
     </header>
     <main>
         <section class="hero">
             <div class="container">
+                <div class="nav">
+                    <ul class="lang list">
+                        <li class="lang-link">
+                            <a href="index.html" class="link">UA</a>
+                        </li>
+                        <li class="lang-link">
+                            <a href="index-ru.html" class="link current">RU</a>
+                        </li>
+                    </ul>
+                </div>
                 <a href="index.html" class="logo">
                     <svg class="logo" width="30" height="30">
                         <use href="./img/icons.svg#icon-logo"></use>
@@ -192,18 +203,20 @@
         <section class="instruction">
             <div class="container">
                 <div class="instruction-wrap">
-                    <h2 class="title">5 шагов к собственной<br>электростанции/h2>
+                    <h2 class="title">5 шагов к собственной<br>электростанции</h2>
                     <ul class="list">
                         <li class="item">
                             <p class="count">01</p>
                             <h3 class="title">Заявка или звонок</h3>
-                            <p class="text">Оставляете заявку на нашем сайте или связываетесь с нами по телефону или в
+                            <p class="text">Оставляете заявку на нашем сайте или связываетесь с нами по телефону или
+                                в
                                 мессенджерах.</p>
                         </li>
                         <li class="item">
                             <p class="count">02</p>
                             <h3 class="title">Консультация и замер на объекте</h3>
-                            <p class="text">Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем участке,
+                            <p class="text">Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем
+                                участке,
                                 чтобы
                                 предложить Вам один наиболее выгодный.</p>
                         </li>
@@ -216,7 +229,8 @@
                         <li class="item">
                             <p class="count">04</p>
                             <h3 class="title">Монтаж СЭС</h3>
-                            <p class="text">Наши специалисты производят монтаж солнечных батарей, проводки и инверторов,
+                            <p class="text">Наши специалисты производят монтаж солнечных батарей, проводки и
+                                инверторов,
                                 при
                                 необходимости изготавливают опоры.</p>
                         </li>
