--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <main>
         <section class="hero">
             <div class="container">
+                <div class="nav">
+                    <ul class="lang list">
+                        <li class="link">
+                            <a href="index.html" class="link current">UA</a>
+                        </li>
+                        <li class="link">
+                            <a href="index-ru.html" class="link">RU</a>
+                        </li>
+                    </ul>
+                </div>
                 <a href="index.html" class="logo">
                     <svg class="logo" width="30" height="30">
                         <use href="./img/icons.svg#icon-logo"></use>
@@ -71,27 +81,29 @@
                 <div class="services-wrap">
                     <ul class="service-list list">
                         <li class="service-item">
-                            <h3 class="title">Повний комплект сонячної електростанції</h3>
+                            <h3 class="title">Повний комплект сонячної <br>електростанції</h3>
                             <p class="text">74 моделі сонячних панелей, 31 модель інверторів, дроти з підвищеною
-                                стійкістю до атмосферних умов, якісні з'єднувачі, контролери зарядів та надійні гелеві акумулятори зі збільшеним терміном служби.</p>
+                                стійкістю до атмосферних умов, якісні з'єднувачі, контролери зарядів та надійні гелеві
+                                акумулятори зі збільшеним терміном служби.</p>
                         </li>
                         <li class="service-item">
-                            <h3 class="title">Подбор оборудования<br>с максимальной производительностью</h3>
-                            <p class="text">Подбираем солнечные панели с учетом расположения Вашего дома, количеством
-                                прямого и рассеянного излучения, для того, чтобы Ваша электростанция - вырабатывала
-                                максимальное количество электроэнергии и окупилась как можно быстрее.</p>
+                            <h3 class="title">Підбір обладнання<br>з максимальною продуктивністю</h3>
+                            <p class="text">Підбираємо сонячні панелі з урахуванням розташування Вашого будинку,
+                                кількістю прямого та розсіяного випромінювання, для того, щоб Ваша електростанція –
+                                виробляла максимальну кількість електроенергії та окупилася якнайшвидше.</p>
                         </li>
                         <li class="service-item">
-                            <h3 class="title">Монтаж оборудования в соответствии с ГОСТом</h3>
-                            <p class="text">Монтаж производится в точном соответствии с ГОСТом, с учетом закона о
-                                «Зеленом тарифе» и требованиями Облэнерго. При этом, мы учитываем, чтобы солнечная
-                                станция имела максимально возможную производительность.</p>
+                            <h3 class="title">Монтаж обладнання відповідно<br> до діючих стандартів</h3>
+                            <p class="text">Монтаж проводиться у точній відповідності до діючих стандартів, з
+                                урахуванням закону про
+                                «Зелений тариф» та вимог Обленерго. При цьому ми враховуємо, щоб сонячна станція мала
+                                максимально можливу продуктивність.</p>
                         </li>
                         <li class="service-item">
-                            <h3 class="title">Помощь в подключении к «Зеленому тарифу»</h3>
-                            <p class="text">Всю бюрократическую процедуру по подключению Вашей электростанции к
-                                «Зеленому тарифу», мы берем на себя, в том числе по увеличению договорной мощности
-                                вашего дома. При заказе солнечной электростанции эта услуга абсолютно бесплатна.</p>
+                            <h3 class="title">Допомога у підключенні<br> до «Зеленого тарифу»</h3>
+                            <p class="text">Всю бюрократичну процедуру підключення Вашої електростанції до «Зеленого
+                                тарифу», ми беремо на себе, в тому числі зі збільшення договірної потужності вашого
+                                будинку. При замовленні сонячної електростанції ця послуга є абсолютно безкоштовною.</p>
                         </li>
                     </ul>
 
@@ -107,48 +119,44 @@
                 <div class="tarif-wrap">
                     <div class="tarif-wrap-2">
                         <ul class="list">
-                            <li class="item">продажа</li>
-                            <li class="item">закрепление</li>
-                            <li class="item">ограничения</li>
+                            <li class="item">продаж</li>
+                            <li class="item">встановлення</li>
+                            <li class="item">обмеження</li>
                         </ul>
                         <div class="tarif-wrap-3">
                             <img src="./img/house-img.jpg" alt="house" width="235" height="200">
-                            <p class="text">Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10
-                                раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).
+                            <p class="text">Ціна, за якою домогосподарства можуть продати електроенергію, у понад 10
+                                разів перевищує ціну, за якою вони її купують для своїх потреб — 0,16 Євро/кВт (продаж).
                             </p>
                         </div>
                         <div class="cards">
                             <div class="card">
-                                <h3 class="title">Гарантия выкупа</h3>
-                                <p class="text">Гарантированный выкуп электроэнергии государством - прописано в НКРЕ
-                                    №447
+                                <h3 class="title">Гарантія викупу</h3>
+                                <p class="text">Гарантований викуп електроенергії державою – прописано у НКРЄ №447</p>
+                            </div>
+                            <div class="card">
+                                <h3 class="title">Довгий термін</h3>
+                                <p class="text">це проект, що підтримується міжнародними інвестиційними організаціями
                                 </p>
                             </div>
                             <div class="card">
-                                <h3 class="title">Долгосрочно</h3>
-                                <p class="text">это проект, поддерживаемый международными инвестиционными организациями
-                                </p>
-                            </div>
-                            <div class="card">
-                                <h3 class="title">Вид вложения</h3>
-                                <p class="text">Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых
-
+                                <h3 class="title">Вид вкладення</h3>
+                                <p class="text">Альтернатива банківським депозитам, окупність – від 16% до 18% річних
                                 </p>
                             </div>
 
                             <div class="card">
-                                <h3 class="title">Высокая ставка</h3>
-                                <p class="text">Самая высокая тарифная ставка в европе - 0,16 евро
+                                <h3 class="title">Високая ставка</h3>
+                                <p class="text">Найвища тарифна ставка в Європі - 0,16 євро
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="tarif-wrap-2-left">
                         <p class="text">
-                            «Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам не
-                            только потреблять, но и продавать выработанное домашними солнечными электростанциями
-                            электричество в электросеть
-                            общего пользования.
+                            «Зелений тариф» — це особливі тарифні умови, які дозволяють приватним домогосподарствам не
+                            лише споживати, а й продавати вироблену домашніми сонячними електростанціями електроенергію
+                            в електромережу загального користування.
                         </p>
                         <img src="./img/house-img-2.jpg" alt="house" width="600" height="525">
                     </div>
@@ -157,8 +165,8 @@
         </section>
         <section class="accent">
             <div class="container">
-                <h2 class="title"> «Солнечная электростанция — идеальное вложение средств в свою энергонезависимость и
-                    пассивный доход»</h2>
+                <h2 class="title">«Сонячна електростанція — ідеальне вкладення коштів у свою енергонезалежність та
+                    пасивний дохід»</h2>
             </div>
         </section>
         <section class="clients">
@@ -167,12 +175,12 @@
                 <div class="clients-wrap">
                     <img src="./img/house-img-3.jpg" alt="house" maxwidth="510" height="370">
                     <div class="client-info">
-                        <h3 class="title">Солнечная электростанция 30 кВт подключенная<br>по Зеленому Тарифу</h3>
+                        <h3 class="title">Сонячна електростанція 30 кВт підключена<br>по Зеленому Тарифу</h3>
                         <ul class="list">
-                            <li class="item">Расположение: Харьковская обл., г. Харьков</li>
-                            <li class="item">Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</li>
-                            <li class="item">Смонтирована: апрель 2017 г.</li>
-                            <li class="item">Срок службы: 25-30 лет.</li>
+                            <li class="item">Розташування: Харківска обл., м. Харків</li>
+                            <li class="item">Чистий дохід за вирахуванням податків з травня 2017 р. <br>до травня 2019 р. 13 900 $.</li>
+                            <li class="item">Змонтована: квітень 2017 г.</li>
+                            <li class="item">Термін роботи: 25-30 років.</li>
                         </ul>
                         <p class="text"></p>
                         <p class="text"></p>
@@ -195,37 +203,33 @@
                     <ul class="list">
                         <li class="item">
                             <p class="count">01</p>
-                            <h3 class="title">Заявка или звонок</h3>
+                            <h3 class="title">Заявка або дзвінок</h3>
                             <p class="text">Оставляете заявку на нашем сайте или связываетесь с нами по телефону или в
                                 мессенджерах.</p>
                         </li>
                         <li class="item">
                             <p class="count">02</p>
-                            <h3 class="title">Консультация и замер на объекте</h3>
-                            <p class="text">Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем участке,
-                                чтобы
-                                предложить Вам один наиболее выгодный.</p>
+                            <h3 class="title">Консультація і замірювання на об'єкті</h3>
+                            <p class="text">Ми прораховуємо понад 10-15 варіантів сонячної станції на Вашій ділянці, щоб
+                                запропонувати Вам один найбільш вигідний.</p>
                         </li>
                         <li class="item">
                             <p class="count">03</p>
-                            <h3 class="title">Заключение договора</h3>
-                            <p class="text">Заключается договор, благодаря которому, вы будете застрахованы от
-                                некачественного оборудования и срыва сроков.</p>
+                            <h3 class="title">Вкладення договору</h3>
+                            <p class="text">Укладається договір, завдяки якому ви будете застраховані від неякісного
+                                обладнання та зриву термінів.</p>
                         </li>
                         <li class="item">
                             <p class="count">04</p>
-                            <h3 class="title">Монтаж СЭС</h3>
-                            <p class="text">Наши специалисты производят монтаж солнечных батарей, проводки и инверторов,
-                                при
-                                необходимости изготавливают опоры.</p>
+                            <h3 class="title">Монтаж СЕС</h3>
+                            <p class="text">Наші фахівці проводять монтаж сонячних батарей, проводок та інверторів, при
+                                необхідності виготовляють опори.</p>
                         </li>
                         <li class="item">
                             <p class="count">05</p>
-                            <h3 class="title">Получение дохода от государства</h3>
-                            <p class="text">После подключения к «Зеленому тарифу», вы получаете доход за каждый
-                                киловатт,
-                                выработанный на Вашей солнечной электростанции по зафиксированному тарифу на момент
-                                подключения.</p>
+                            <h3 class="title">Отримання доходу від держави</h3>
+                            <p class="text">Після підключення до «Зеленого тарифу» ви отримуєте дохід за кожен кіловат,
+                                вироблений на Вашій сонячній електростанції за зафіксованим тарифом на момент підключення.</p>
                         </li>
                     </ul>
                 </div>
@@ -241,7 +245,7 @@
                 <h2 class="title">Залишити заявку</h2>
                 <ul class="list">
                     <li class="item">
-                        <p class="text">Им'я</p>
+                        <p class="text">Ім'я</p>
                         <p class="line"></p>
                     </li>
                     <li class="item">
@@ -260,19 +264,16 @@
                 <h2 class="title">Контакти</h2>
                 <ul class="list">
                     <li class="item">
-                        <p class="text">Центральный офис:<br>г. Москва, ул,Гоголя 13, 1й этаж</p>
+                        <p class="text">Центральний офіс:<br>м. Київ, вул. Коновальця, 103 оф. 410</p>
+                    </li>                    
+                    <li class="item">
+                        <p class="text">Представництва в Харкові, Одесі</p>
                     </li>
                     <li class="item">
-                        <p class="text">Представительство в Киеве:<br>г. Киев, ул. Є. Коновальця, 103 оф. 410</p>
+                        <p class="text">+38 067 504-32-57</p>
                     </li>
                     <li class="item">
-                        <p class="text">Представительства в Харькове, Одессе, Ростове, Сочи, Белгороде</p>
-                    </li>
-                    <li class="item">
-                        <p class="text">+7 987 654-54-56<br>+38 067 504-32-57</p>
-                    </li>
-                    <li class="item">
-                        <p class="text">Ежедневно 08:00 - 20:00</p>
+                        <p class="text">Щоденно 08:00 - 20:00</p>
                     </li>
                 </ul>
             </div>
